--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -15,6 +15,8 @@
                             <Run Text="{Binding Surname}" FontSize="16"/>
                             <Run Text="{Binding Name}" FontSize="16"/>
                             <Run Text="{Binding Patronymic}" FontSize="16"/>
+                            <Run Text="{Binding Speciality}" FontSize="16"/>
+                            <Run Text="{Binding Enrollment}" FontSize="16"/>
                         </TextBlock>
                     </StackPanel>
                 </DataTemplate>
