--- a/WpfApp3/InfoWindow.xaml
+++ b/WpfApp3/InfoWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp3"
         mc:Ignorable="d"
-        Title="Информация о сотруднике" Height="320" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="#FF0D1117" Foreground="White">
+        Title="Информация о абитуриенте" Height="800" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="Margin" Value="8" />
@@ -24,30 +24,67 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100" />
+            <ColumnDefinition Width="335" />
             <ColumnDefinition Width="19*" />
             <ColumnDefinition Width="81*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="ID работника:" Margin="8,8,8,8"/>
-        <TextBlock Text="Фамилия:" Grid.Row="1" Margin="8,8,8,8" />
-        <TextBlock Text="Имя:" Grid.Row="2" Margin="8,8,8,8"/>
-        <TextBlock Text="Отчество:" Grid.Row="3" Margin="8,8,8,8"/>
-        <TextBlock Text="Дата рождения:" Grid.Row="4" Margin="8,8,8,8"/>
-        <TextBlock Text="Телефон:" Grid.Row="5" Margin="8,8,8,8" />
-        <TextBlock Text="Отдел:" Grid.Row="6" Margin="8,8,8,8"/>
+        <TextBlock Text="Фамилия:" Grid.Row="0" Margin="8,8,8,8" />
+        <TextBlock Text="Имя:" Grid.Row="1" Margin="8,8,8,8"/>
+        <TextBlock Text="Отчество:" Grid.Row="2" Margin="8,8,8,8"/>
+        <TextBlock Text="Пол:" Grid.Row="3" Margin="8,8,8,8"/>
+        <TextBlock Text="Дата рождения:" Grid.Row="4" Margin="8,8,8,8" />
+        <TextBlock Text="Полных лет:" Grid.Row="5" Margin="8,8,8,8" />
+        <TextBlock Text="Гражданство:" Grid.Row="6" Margin="8,8,8,8" />
+        <TextBlock Text="Место проживания:" Grid.Row="7" Margin="8,8,8,8" />
+        <TextBlock Text="Закончил классов:" Grid.Row="8" Margin="8,8,8,8" />
+        <TextBlock Text="Закончил только(9/11):" Grid.Row="9" Margin="8,8,8,8" />
+        <TextBlock Text="Средний балл аттестата:" Grid.Row="10" Margin="8,8,8,8" />
+        <TextBlock Text="СНИЛС:" Grid.Row="11" Margin="8,8,8,8"/>
+        <TextBlock Text="Наличие справки об инвалидности:" Grid.Row="12" Margin="8,8,8,8" />
+        <TextBlock Text="Наличие документа о сиротстве(опекунстве):" Grid.Row="13" Margin="8,8,8,8" />
+        <TextBlock Text="Специальность:" Grid.Row="14" Margin="8,8,8,8" />
+        <TextBlock Text="Аттестат:" Grid.Row="15" Margin="8,8,8,8" />
+        <TextBlock Text="Бюджет/Договор об оказании платных образовательных услуг:" Grid.Row="16" Margin="8,8,8,8" />
+        <TextBlock Text="Зачислен:" Grid.Row="17" Margin="8,8,8,8" />
+        <TextBlock Text="Год поступления:" Grid.Row="18" Margin="8,8,8,8"/>
 
-        <TextBlock Text="{Binding Id_pers}" Grid.Column="1" Grid.ColumnSpan="2" Margin="8,8,8,8"/>
-        <TextBlock Text="{Binding Surname}" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Margin="8,8,8,8" />
-        <TextBlock Text="{Binding Name}" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Margin="8,8,8,8"  />
-        <TextBlock Text="{Binding Patronymic}" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="8,8,8,8" />
-        <TextBlock Text="{Binding Date_of_Birth}" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" Margin="8,8,8,8"/>
-        <TextBlock Text="{Binding Phone}" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="2" Margin="8,8,8,8" />
-        <TextBlock Text="{Binding Department}" Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="2" Margin="8,8,8,8"/>
+        <TextBlock Text="{Binding Surname}" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding Name}" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Margin="8,8,8,8"  />
+        <TextBlock Text="{Binding Patronymic}" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding Gender}" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding Date_of_Birth}" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding Age}" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding Citizenship}" Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding PlaceOfResidence}" Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding GraduatedFromGrades}" Grid.Column="1" Grid.Row="8" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding FinishedOnly}" Grid.Column="1" Grid.Row="9" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding AverageScoreOfCertificate}" Grid.Column="1" Grid.Row="10" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding Snils}" Grid.Column="1" Grid.Row="11" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding DisabilityCertificate}" Grid.Column="1" Grid.Row="12" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding Orphan}" Grid.Column="1" Grid.Row="13" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding Speciality}" Grid.Column="1" Grid.Row="14" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding Certificate}" Grid.Column="1" Grid.Row="15" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding Money}" Grid.Column="1" Grid.Row="16" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding Enrollment}" Grid.Column="1" Grid.Row="17" Grid.ColumnSpan="2" Margin="8,8,8,8" />
+        <TextBlock Text="{Binding YearOfAdmission}" Grid.Column="1" Grid.Row="18" Grid.ColumnSpan="2" Margin="8,8,8,8" />
 
-        <StackPanel Orientation="Horizontal" Grid.Row="6" Grid.Column="2" Width="50" Margin="12,33,0,12" Grid.RowSpan="2" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Button IsDefault="True"  Click="Accept_Click" Margin="0,0, 0,0" Height="25" Width="25" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#FF0D1117" BorderBrush="#FF13EB08" Foreground="White">OK</Button>
+        <StackPanel Orientation="Horizontal" Grid.Row="19" Grid.Column="2" Width="50" Margin="0,0,0,0" Grid.RowSpan="2" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Button IsDefault="True"  Click="Accept_Click" Margin="0,0, 0,0" Height="25" Width="25" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">OK</Button>
         </StackPanel>
     </Grid>
 </Window>
