--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -32,10 +32,11 @@
         <Menu Height="25" Margin="10, 0, 10, 0" VerticalAlignment="Top">
             <MenuItem Header="Сохранить как" Height="25" Background="#fff" BorderThickness="2">
                 <MenuItem Header="Excel" Click="Excel_Click" ></MenuItem>
-                <MenuItem Header="Word" ></MenuItem>
+                <MenuItem Header="Word" Click="MenuItem_Click" ></MenuItem>
             </MenuItem>
-            <TextBox x:Name="poiskfield" TextWrapping="Wrap" Width="320" Height="19" BorderBrush="#FF7D98E8"/>
-
+            <TextBox x:Name="poiskfield" TextWrapping="Wrap" Width="320" Height="19" BorderBrush="#FF7D98E8" TextChanged="poiskfield_TextChanged"/>
+            <TextBlock> Найдено абитуриентов: </TextBlock>
+            <TextBlock x:Name="Result" ></TextBlock>
         </Menu>
     </Grid>
 </Window>
